# XenAlgo

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Dockerfile  PLAN.md  README.md  pyproject.toml  pytest.ini  requirements.in
.github/workflows/: ci.yml
Brain/: README.md  __init__.py  alpha_engine.py  backtest_engine.py  broker.py  data_manager.py  executor.py  market_hours.py  order_manager.py  portfolio_engine.py  position_manager.py  report_generator.py  walk_forward.py
Strategies/: alpha_027.py  alpha_062.py  std30.py
config/: config.live.yaml  config.research.yaml  nse_overrides.yaml
deploy/evidence/: README.md  d0-release.example.json  d1-host.example.json
deploy/oracle/: README.md  backup_state.sh  (+11 more)
docs/: BUILD_PLAN.md  DEPLOYMENT_OPERATOR_INPUTS.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_STATUS.md  END_TO_END_COMPLETION_PLAN.md  FOUNDER_PITCH.md  FYERS_CONTRACT.md  HANDOFF.md  PHASE0_OPERATIONS.md  PHASE3_2_OPERATIONS.md  PHASE3_3_OPERATIONS.md  PHASE3_4_OPERATIONS.md  PHASE3_5_OPERATIONS.md  PHASED_BUILD_PLAN_REMAINING.md  PRD.md  README.md  REMEDIATION_PLAN_COMMISSIONING.md  REMEDIATION_PLAN_REVIEW_FINDINGS.md  RESEARCH_VALIDATION.md  SUCCESS_CRITERIA.md  TEST_PLAN.md  TRACEABILITY.md  TRD.md
tests/: conftest.py  test_phase0_scaffold.py
xenalgo/: __init__.py  __main__.py  alerts.py  config.py  data.py  deployment.py  deployment_cli.py  host_preflight.py  logging_setup.py  monolith.py  ops.py  paper_daemon.py  phase32.py  phase33.py  phase34.py  phase35.py  risk.py  scheduler.py  session_composition.py  strategy.py
(+40 files in other folders)
