[project]
name = "xenalgo"
version = "0.0.0"
description = "Autonomous NSE swing-trading system scaffold."
requires-python = ">=3.14,<3.15"
dependencies = [
    "apscheduler==3.11.3",
    "dhanhq==2.0.2",
    "duckdb==1.5.4",
    "fastapi==0.139.0",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "numpy==2.5.0",
    "pandas==3.0.3",
    "pandas-market-calendars==5.4.0",
    "plotly==6.8.0",
    "pyarrow==24.0.0",
    "pyotp==2.10.0",
    "pyyaml==6.0.3",
    "python-telegram-bot==22.8",
    "pytz==2026.2",
    "requests==2.34.2",
    "scipy==1.18.0",
    "tabulate==0.10.0",
    "typer==0.26.8",
    "uvicorn==0.50.0",
    "websockets==16.0",
]

[project.optional-dependencies]
test = [
    "hypothesis==6.156.1",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "respx==0.23.1",
]

[tool.pytest.ini_options]
testpaths = ["tests", "_source/Lab"]
pythonpath = [".", "_source"]
markers = [
    "chaos: adversarial failure-injection suite (Phase 3.1; run nightly/pre-gate)",
    "property: hypothesis-based invariant tests",
    "integration: multi-component wiring tests",
]
addopts = "-ra"
